# 7_day_ai_agents_email_crash_course

./: README.md  clean_notebooks.py  main.py  pyproject.toml
course/: mlops-zoomcamp.npy  notebook.ipynb  working-with-zip-archives.py
course/logs/: faq_agent_20260115_154503_4c700b.json  faq_agent_20260115_154856_b0ed50.json  faq_agent_20260115_155009_550566.json  faq_agent_v2_20260115_155710_189b38.json  faq_agent_v2_20260115_180234_409f2f.json  faq_agent_v2_20260115_180238_4471c6.json  faq_agent_v2_20260115_180239_acfc4c.json  faq_agent_v2_20260115_180254_758b13.json  faq_agent_v2_20260115_180318_dcefe7.json  faq_agent_v2_20260115_180340_e97459.json  faq_agent_v2_20260115_180410_274d46.json  faq_agent_v2_20260115_180430_04c456.json  faq_agent_v2_20260115_180455_7b52b7.json  faq_agent_v2_20260115_180521_b13de8.json  faq_agent_v2_20260115_180543_60b11b.json  faq_agent_v2_20260115_180603_18f4cd.json
project/: README.md  SEARCH_GUIDE.md  TASK_MANAGER_README.md  agent.md  agent.py  chunking.py  chunks.json  data_preparation.py  embeddings.npy  eval_out.txt  evaluate.ipynb  evaluate_batch.py  evaluation.md  evaluation_results.json  evaluation_utils.py  generate_test_cases.py  intelligent_chunking.py  judge.py  notebook-Copy1-backup.ipynb  notebook-Copy1.ipynb  notebook.ipynb  notebook_issues_and_fixes.md  output.txt  pipline.md  run_pipeline.py  search.py  test_cases.json
project/app/: .gitignore  README.md  debug_search.py  ingest.py  logs.py  main.py  pyproject.toml  requirements.txt  search_agent.py  search_tools.py  verify_groq.py
(+4 files in other folders)
